--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                             <!-- firstname input -->
                             <input  type="text" name="firstName" id="fname" placeholder="First Name" maxlength="15" minlength="3">
                             <label for="firstName">
-                                first name cannot be empty
+                                First Name cannot be empty
                             </label>
                             <i class="error">
                                 <img src="images/icon-error.svg" alt="error icon">
@@ -56,7 +56,7 @@
                             <!-- lastname input -->
                             <input  type="text" name="lastName" id="sname" placeholder="Last Name" maxlength="15" minlength="3">
                             <label for="lastName">
-                                last name cannot be empty
+                                Last Name cannot be empty
                             </label>
                             <i class="error">
                                 <img src="images/icon-error.svg" alt="error icon">
