--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                         <div class="space">
 
                             <!-- firstname input -->
-                            <input  type="text" name="firstName" id="fname" placeholder="First Name" maxlength="15" minlength="3">
+                            <input  type="text" name="fname" id="fname" placeholder="First Name" maxlength="15" minlength="3">
                             <label for="firstName">
                                 First Name cannot be empty
                             </label>
@@ -54,7 +54,7 @@
                         <div class="space">
 
                             <!-- lastname input -->
-                            <input  type="text" name="lastName" id="sname" placeholder="Last Name" maxlength="15" minlength="3">
+                            <input  type="text" name="lname" id="sname" placeholder="Last Name" maxlength="15" minlength="3">
                             <label for="lastName">
                                 Last Name cannot be empty
                             </label>
