--- a/index.html
+++ b/index.html
@@ -38,7 +38,8 @@
                     </div>
 
                     <!-- form section -->
-                    <form >
+                    <form action="">
+                        
                         <div class="space">
 
                             <!-- firstname input -->
@@ -46,8 +47,8 @@
                             <label for="firstName">
                                 First Name cannot be empty
                             </label>
-                            <i class="error">
-                                <img src="images/icon-error.svg" alt="error icon">
+                            <i class="alert">
+                                <img src="images/icon-error.svg" alt="alert">
                             </i>
                         </div>
 
@@ -58,8 +59,8 @@
                             <label for="lastName">
                                 Last Name cannot be empty
                             </label>
-                            <i class="error">
-                                <img src="images/icon-error.svg" alt="error icon">
+                            <i class="alert">
+                                <img src="images/icon-error.svg" alt="alert">
                             </i>
                         </div>
 
@@ -69,8 +70,8 @@
                             <label for="email">
                                 Looks like this is not an email
                             </label>
-                            <i class="error">
-                                <img src="images/icon-error.svg" alt="error icon">
+                            <i class="alert">
+                                <img src="images/icon-error.svg" alt="alert">
                             </i>
                         </div>
 
@@ -81,8 +82,8 @@
                             <label for="password">
                                 Password cannot be empty
                             </label>
-                            <i class="error">
-                                <img src="images/icon-error.svg" alt="error icon">
+                            <i class="alert">
+                                <img src="images/icon-error.svg" alt="alert">
                             </i>
                         </div>
 
